--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-name",
+  "name": "paginationtry",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,7 +8,6 @@
   "dependencies": {
     "express": "3.4.4",
     "jade": "*",
-    "validator": "*",
-    "nodemon": "*"
+    "validator": "*"
   }
 }
